# ticket-guard

./: .gitignore  DEPLOYMENT.md  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  functions-ci-deploy.yml  functions-ci.yml  functions-deploy.yml  functions-unit-tests.yml  infra-apply.yml  infra-deploy.yml  infra-plan.yml
docs/: azure-architecture-poc.md
functions/: README-poetry.md  local.settings.json  pyproject.toml  requirements.txt
functions/IssueToken/: __init__.py  function.json
functions/VerifyToken/: __init__.py  function.json
functions/tests/: test_issue_token.py
infra/: README.md  deploy.subscription.bicep  main.bicep  parameters.example.json  parameters.poc.json  poc.bicepparam  prod.bicepparam  rg-only.bicep
ios-demo/OmniPass/OmniPass/: ContentView.swift  OmniPassApp.swift
ios-demo/OmniPass/OmniPass.xcodeproj/: project.pbxproj
ios-demo/OmniPass/OmniPassTests/: OmniPassTests.swift
ios-demo/OmniPass/OmniPassUITests/: OmniPassUITests.swift  OmniPassUITestsLaunchTests.swift
ios-demo/TicketGuardDemo/TicketGuardDemo/: ContentView.swift  TicketGuardDemoApp.swift
ios-demo/TicketGuardDemo/TicketGuardDemo.xcodeproj/: project.pbxproj
ios-demo/TicketGuardDemo/TicketGuardDemo/API/: Config.swift  IssueTokenAPI.swift  Models.swift
ios-demo/TicketGuardDemo/TicketGuardDemoTests/: IssueTokenAPITests.swift  TicketGuardDemoTests.swift
ios-demo/TicketGuardDemo/TicketGuardDemoUITests/: TicketGuardDemoUITests.swift  TicketGuardDemoUITestsLaunchTests.swift
scripts/: cleanup-branches.sh
(+2 files in other folders)
